# fp_perception

./: AUTHORS  Doxygen  LICENSE  README.md  readme.md  refactor.md  refactor_checklist.md
.devcontainer/humble/: Dockerfile  devcontainer.json
.devcontainer/jazzy/: Dockerfile  devcontainer.json
.github/workflows/: doxygen-pages.yml
audio_driver/: CMakeLists.txt  package.xml
audio_driver/src/: driver_node.cpp
docs/: audio_drivers.md  base_classes.md  image_analysis_drivers.md  interfaces.md  plugin_configuration.md  readme.md  sentiment_drivers.md  server_system.md  speech_drivers.md  test_the_system.md  transribe_drivers.md  vision_drivers.md
docs/html/: README_8md.html  algorithm__base_8hpp.html  algorithm__base_8hpp__incl.map  algorithm__base_8hpp__incl.md5  algorithm__base_8hpp_source.html  annotated.html  audio_2structs_8hpp.html  audio_2structs_8hpp__dep__incl.map  classes.html  (+679 more)
eye_gaze_detection/: CMakeLists.txt  package.xml
fp_perception/: CMakeLists.txt  package.xml
fp_perception/config/: config.yaml
fp_perception/include/fp_perception/: audio_buffer.hpp  driver_manager.hpp  image_analysis_pipeline.hpp  perception_server.hpp  sentiment_pipeline.hpp  speech_pipeline.hpp  transcription_pipeline.hpp
fp_perception/launch/: server.launch.py  server_composed.launch.py
fp_perception/src/: server_component.cpp  server_node.cpp
fp_perception_base/: CMakeLists.txt  package.xml
fp_perception_driver_audio/: CMakeLists.txt  find_devices.py  package.xml  plugins.xml  readme.md  test_mic.py
fp_perception_driver_audio/include/fp_perception_driver_audio/: microphone_audio_driver.hpp  speaker_audio_driver.hpp  utils.hpp
fp_perception_driver_audio/src/: audio_drivers.cpp
fp_perception_driver_image_analysis/: CMakeLists.txt  package.xml  plugins.xml
fp_perception_driver_sentiment/: CMakeLists.txt  package.xml  plugins.xml
fp_perception_driver_speech/: CMakeLists.txt  package.xml  plugins.xml
fp_perception_driver_speech/include/fp_perception_driver_speech/: openai_driver.hpp
fp_perception_driver_speech/src/: speech_drivers.cpp
fp_perception_driver_transcribe/: CMakeLists.txt  package.xml  plugins.xml
fp_perception_driver_vision/: CMakeLists.txt  package.xml  plugins.xml  readme.md
fp_perception_msgs/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  package.xml
perception/config/: config.yaml
perception/include/perception/: algorithm_base.hpp  audio_buffer.hpp  driver_base.hpp  driver_manager.hpp  exceptions.hpp  image_analysis_pipeline.hpp  options.hpp  perception_server.hpp  sentiment_pipeline.hpp  speech_pipeline.hpp  transcription_pipeline.hpp
perception/launch/: server.launch.py  server_composed.launch.py
perception/src/: perception.cpp  server_component.cpp  server_node.cpp
perception_algo_context_detection/: CMakeLists.txt  package.xml  plugins.xml
perception_algo_eye_gaze_detection/: CMakeLists.txt  package.xml  plugins.xml  readme.md
perception_base/: CMakeLists.txt  package.xml
perception_base/include/perception_base/: algorithm_base.hpp  driver_base.hpp  exceptions.hpp  rest_base.hpp  rest_base_old.hpp
perception_base/include/perception_base/audio/: audio_sink_driver.hpp  audio_source_driver.hpp  structs.hpp  wav.hpp
perception_base/include/perception_base/image_analysis/: image_analysis_driver.hpp  structs.hpp
perception_base/include/perception_base/rest/: file_part_source.hpp  structs.hpp
perception_base/include/perception_base/sentiment/: sentiment_analysis_driver.hpp  structs.hpp
perception_base/include/perception_base/speech/: speech_synthesis_driver.hpp
perception_base/include/perception_base/transcription/: structs.hpp  transcription_driver.hpp
perception_base/include/perception_base/utils/: audio.hpp  options.hpp
perception_base/include/perception_base/utils/audio/: structs.hpp  wav.hpp
perception_base/include/perception_base/utils/rest/: structs.hpp
perception_base/include/perception_base/vision/: structs.hpp  vision_source_driver.hpp
perception_detect_eye_gaze/: CMakeLists.txt  package.xml  plugins.xml
perception_detect_eye_gaze/include/perception_detect_eye_gaze/: attention_calibrator.hpp  attention_detector.hpp  calibrated_attention_detector.hpp  gaze_algorithm.hpp  gaze_interface_controller.hpp
perception_detect_eye_gaze/include/perception_detect_eye_gaze/utils/: gaze_utils.hpp
perception_detect_eye_gaze/models/: face_mesh.pt
perception_detect_eye_gaze/src/: eye_gaze_algorithm.cpp
perception_driver_audio/: CMakeLists.txt  find_devices.py  package.xml  plugins.xml  readme.md
perception_driver_audio/include/perception_driver_audio/: microphone_audio_driver.hpp  speaker_audio_driver.hpp  utils.hpp
perception_driver_audio/src/: audio_drivers.cpp
perception_driver_image_analysis/: CMakeLists.txt  package.xml  plugins.xml
perception_driver_sentiment/: CMakeLists.txt  package.xml  plugins.xml
perception_driver_speech/: CMakeLists.txt  package.xml  plugins.xml
perception_driver_speech/include/perception_driver_speech/: openai_driver.hpp
perception_driver_speech/src/: speech_drivers.cpp
perception_driver_transcribe/: .clang-format  CMakeLists.txt  package.xml  plugins.xml
perception_driver_vision/: CMakeLists.txt  package.xml  plugins.xml  readme.md
perception_driver_vision/include/perception_driver_vision/: default_vision_driver.hpp  opencv_vision_driver.hpp
perception_driver_vision/src/: vision_drivers.cpp
perception_events/: CMakeLists.txt  package.xml  readme.md
perception_events/include/perception_events/: event_client.hpp  event_listener.hpp  event_types.hpp
perception_events/launch/: foxglove.launch.py  listener.launch.py
perception_events/src/: event_listener_node.cpp
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: PerceptionAudio.msg  PerceptionEvent.msg
perception_msgs/srv/: PerceptionSentiment.srv  PerceptionSpeech.srv  PerceptionTranscribe.srv
perception_utils/: CMakeLists.txt  package.xml  readme.md
pytorch_vendor/: .gitignore  CMakeLists.txt  package.xml
vision_driver/: CMakeLists.txt  package.xml
(+161 files in other folders)
