<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fp_perception_driver_audio</name>
  <version>0.1.2</version>
  <description>Audio input and output drivers for the fp_perception stack.</description>

  <maintainer email="kalanaratnayake95@gmail.com">Kalana Ratnayake</maintainer>
  <maintainer email="kalana.ratnayakemudiyanselage@canberra.edu.au">Kalana Ratnayake</maintainer>

  <author email="kalana.ratnayakemudiyanselage@canberra.edu.au">Kalana Ratnayake</author>
  <author email="kalanaratnayake95@gmail.com">Kalana Ratnayake</author>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>diagnostic_updater</depend>
  <depend>pluginlib</depend>
  <depend>fp_perception_base</depend>
  <depend>fp_perception_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export PortAudio note (system-level dependency) -->
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
    <exec_depend>portaudio</exec_depend> <!-- Add this as a note, though portaudio is usually installed outside rosdep -->
  </export>
</package>
