<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fp_perception_driver_speech</name>
  <version>0.1.2</version>
  <description>Speech synthesis drivers for the fp_perception stack.</description>

  <maintainer email="kalanaratnayake95@gmail.com">Kalana Ratnayake</maintainer>
  <maintainer email="kalana.ratnayakemudiyanselage@canberra.edu.au">Kalana Ratnayake</maintainer>

  <author email="kalana.ratnayakemudiyanselage@canberra.edu.au">Kalana Ratnayake</author>
  <author email="kalanaratnayake95@gmail.com">Kalana Ratnayake</author>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>fp_perception_base</depend>
  <depend>fp_perception_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
