cmake_minimum_required(VERSION 3.8)

project(perception)
# Default to C++17
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(pluginlib REQUIRED)
find_package(perception_msgs REQUIRED)
find_package(perception_events REQUIRED)

include_directories(
  include
)

install(DIRECTORY include/
  DESTINATION include
)

ament_export_include_directories(include)
ament_package()
