<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_driver_audio</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kalanaratnayake95@gmail.com">kalana</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>perception_base</depend>
  <depend>perception_events</depend>
  <depend>perception_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export PortAudio note (system-level dependency) -->
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
    <exec_depend>portaudio</exec_depend> <!-- Add this as a note, though portaudio is usually installed outside rosdep -->
  </export>
</package>
