<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_events</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>

  <maintainer email="kalanaratnayake95@gmail.com">Kalana Ratnayake</maintainer>
  <maintainer email="kalana.ratnayakemudiyanselage@canberra.edu.au">Kalana Ratnayake</maintainer>

  <author email="kalana.ratnayakemudiyanselage@canberra.edu.au">Kalana Ratnayake</author>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>perception_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>foxglove_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
